--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -22,9 +22,9 @@
         <div class="indeterminate"></div>
     </div>
     <a id="preloaderBtn" class="waves-effect waves-light btn">Toogle Preloader</a>
-    <div id="createNewBtn" class="fixed-action-btn" style="display:block">
+    <!-- <div id="createNewBtn" class="fixed-action-btn" style="display:block">
         <a class="btn-floating btn-large waves-effect waves-light red left-align"><i class="material-icons">add</i></a>
-    </div>
+    </div> -->
     <div style="margin: 20px;">
         <!-- --------------------------------------------------------------------------------------- -->
         <!-- ------------------------------- Search Input ------------------------------------------ -->
