--- a/OpenBioC/app/static/app/OBC.css
+++ b/OpenBioC/app/static/app/OBC.css
@@ -77,31 +77,21 @@ pre {
 }
 
 #d3wf {
+/* Obselete. */
   overflow: auto;
   border: 1px solid red;
   height: 400px;  
 }
 
 #cywf {
-/*  overflow: auto; */
-/* position: absolute; */
-/* left: 0; */
-/* top: 0; */
-
   border: 1px solid red; 
   height: 400px;  
-/*  width: 100%; */
-
-/*
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-*/
-
 }
 
+#cyrep {
+  border: 1px solid red; 
+  height: 400px;  
+}
 
 
 
