--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -422,6 +422,9 @@
         <div class="row">
             <div id="cywf"></div>
         </div>
+        <div class="row">
+            <div id="cyrep"></div>
+        </div>
 
         <hr>
         <ul id="editWorkflowAccordion" class="collapsible expandable faster" style="margin-top:0px;">
