--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -37,24 +37,27 @@
                         <input id="leftPanelSearch" type="text" class="validate">
                         <label for="leftPanelSearch">Search</label>
                     </div>
-                    <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
-                        <label>
-                            <input type="checkbox" />
-                            <span>Tool</span>
-                        </label>
-                    </p>
-                    <p class="col s12 m3 grid-s12-m3-l3 left-align" style="margin-bottom:0px">
-                        <label>
-                            <input type="checkbox" />
-                            <span>Workflow</span>
-                        </label>
-                    </p>
-                    <p class="col s12 m3 grid-s12-m3-l3 left-align" style="margin-bottom:0px">
-                        <label>
-                            <input type="checkbox" />
-                            <span>Reference</span>
-                        </label>
-                    </p>
+                    <div class="left-align" style="margin-left:15px">
+                        <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
+                            <label>
+                                <input type="checkbox" />
+                                <span>Tool</span>
+                            </label>
+                        </p>
+                        <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
+                            <label>
+                                <input type="checkbox" />
+                                <span>Workflow</span>
+                            </label>
+                        </p>
+                        <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
+                            <label>
+                                <input type="checkbox" />
+                                <span>Reference</span>
+                            </label>
+                        </p>
+                    </div>
+                    
                 </div>
             </form>
 
