--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -350,8 +350,6 @@
                 <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                     data-tooltip="Clear" ng-click="workflow_info_clear_pressed()"
                     ng-disabled="!workflows_info_editable">Clear</a>
-                <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                    data-tooltip="Add Step" ng-click="workflow_info_add_step_clicked()">Add Step</a>
                 <a id="expandAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
                     data-position="bottom" data-tooltip="Expand All"><i class="material-icons">unfold_more</i></a>
                 <a id="collapseAllBtn2" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px"
@@ -438,7 +436,7 @@
                     <i class="material-icons left">linear_scale</i>
                     <span class="left" style="margin-right: 10px;">Step</span>
                     <a id="workflowStepPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="Add Step"><i class="material-icons plusIcon">add</i></a>
+                        data-position="left" data-tooltip="Add Step" ng-click="workflow_info_add_step_clicked()" ng-show="workflows_info_editable"><i class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
