--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -168,7 +168,7 @@
             </div>
             <div class="collapsible-body">
                 <!-- Hide Variables -->
-                <div class="row">
+                <div class="row left-align">
                     <strong><a href ng-click="tools_var_jstree_id_show_clicked()"><span
                                 ng-show="tools_var_jstree_id_show">Hide</span><span
                                 ng-show="!tools_var_jstree_id_show">Show</span> variables from dependent
@@ -177,7 +177,7 @@
                         should-apply="tools_search_jstree_config_apply()" ng-model="tools_var_jstree_model"
                         tree="tools_var_jstree" ng-show="tools_var_jstree_id_show"></div>
                 </div>
-                <div class="row" ng-show="!tools_info_editable">
+                <div class="row left-align" ng-show="!tools_info_editable">
                     Operating System: <span ng-bind="tool_os_choices.name"></span>
                 </div>
                 <!-- adding values to use it for dockerfile-->
