--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -283,6 +283,9 @@
                     </div>
                     <div class="container">
                         <div class="row">
+                            <a id="toggleReportsBtn" href class="waves-effect waves-teal btn" >Toggle on the right</a>
+                        </div>
+                        <div class="row">
                             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
                             richardson
                             ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
