--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -446,12 +446,18 @@
                                     <span class="white-text" ng-bind="workflow_step_error_message"></span>
                                 </div>
                             </div>
-                            <div class="input-field col s12">
+                            <div class="input-field col s10">
                                 <input id="editWorkflowName" type="text" class="validate" ng-model="workflows_step_name"
                                     ng-disabled="!workflows_info_editable">
                                 <label for="editWorkflowName">Name</label>
                             </div>
-                            <div id="workflow_step_editor"></div>
+                            <div class="input-field col s2">
+                                <label>
+                                    <input type="checkbox" ng-model="workflows_step_main"/>
+                                    <span>Main</span>
+                                </label>
+                            </div>
+                            <div class="row col s12" id="workflow_step_editor"></div>
                             <!-- 
                                 <div class="input-field col s12">
                                     <textarea id="editWorkflowDescription"
