step main logic in OBC_ctrl #61

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -453,7 +453,7 @@
                             </div>
                             <div class="input-field col s2">
                                 <label>
-                                    <input type="checkbox" ng-model="workflows_step_main"/>
+                                    <input type="checkbox" ng-model="workflows_step_main" ng-disabled="!workflows_info_editable"/>
                                     <span>Main</span>
                                 </label>
                             </div>
