--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -435,8 +435,8 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">linear_scale</i>
                     <span class="left" style="margin-right: 10px;">Step</span>
-                    <a id="workflowStepPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="Add Step" ng-click="workflow_info_add_step_clicked()" ng-show="workflows_info_editable"><i class="material-icons plusIcon">add</i></a>
+                    <!-- <a id="workflowStepPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
+                        data-position="left" data-tooltip="Add Step" ng-click="workflow_info_add_step_clicked()" ng-show="workflows_info_editable"><i class="material-icons plusIcon">add</i></a> -->
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -467,7 +467,7 @@
                                 -->
                             <div class="row col s12">
                                 <div class="right-align">
-                                    <a class="waves-effect waves-light btn" style="margin:2px">Cancel</a>
+                                    <a class="waves-effect waves-light btn" style="margin:2px" ng-show="workflows_info_editable" ng-click="workflow_info_add_step_clicked()">Clear</a>
                                     <a class="waves-effect waves-light btn" style="margin:2px"
                                         ng-show="workflows_info_editable" ng-click="workflow_step_delete()">Delete</a>
                                     <a class="waves-effect waves-light btn" style="margin:2px"
