reports in main search #59

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -620,15 +620,15 @@
                         <div class="row">
 
                             <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                <input id="generalReportsName" type="text" class="validate">
-                                <label for="generalReportsName">Name</label>
+                                <input id="generalReportsName" type="text" class="validate" ng-model="report_workflow_name">
+                                <label for="generalReportsName">Workflow Name</label>
                             </div>
                             <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                <input id="generalReportsEdit" type="text" class="validate">
+                                <input id="generalReportsEdit" type="text" class="validate" ng-model="report_workflow_edit">
                                 <label for="generalReportsEdit">Edit</label>
                             </div>
                             <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                <input id="generalReportsRun" type="text" class="validate">
+                                <input id="generalReportsRun" type="text" class="validate" ng-model="report_workflow_run">
                                 <label for="generalReportsRun">Run</label>
                             </div>
                         </div>
