save references to db #62

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -731,7 +731,7 @@
                         data-tooltip="Save" ng-click="tool_create_save_pressed()" ng-show="tools_info_editable"><i
                             class="material-icons">save</i></a> -->
                 <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                    data-tooltip="Save"><i class="material-icons">save</i></a>
+                    data-tooltip="Save" ng-click="references_create_save_pressed()"><i class="material-icons">save</i></a>
             </div>
         </div>
 
