--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -42,11 +42,11 @@
                                             </div>
                                             <div class="col s9">
                                                 <div class="input-field col s12">
-                                                    <input id="profileFirstname" type="text" class="validate">
+                                                    <input id="profileFirstname" type="text" class="validate" ng-model="profile_firstname">
                                                     <label for="profileFirstname">Firstname</label>
                                                 </div>
                                                 <div class="input-field col s12">
-                                                    <input id="profileLastname" type="text" class="validate">
+                                                    <input id="profileLastname" type="text" class="validate" ng-model=profile_lastname>
                                                     <label for="profileLastname">Lastname</label>
                                                 </div>
                                             </div>
@@ -62,16 +62,15 @@
                                             <label for="profileEmail">Email</label>
                                         </div>
                                         <div class="input-field col s12">
-                                            <input id="profileWebsite" type="text" class="validate"
-                                                value="www.blah.com">
+                                            <input id="profileWebsite" type="text" class="validate" ng-model="profile_website">
                                             <label for="profileWebsite">Website</label>
                                         </div>
                                         <div class="input-field col s12">
-                                            <input id="profileAffiliation" type="text" class="validate">
+                                            <input id="profileAffiliation" type="text" class="validate" ng-model="profile_affiliation">
                                             <label for="profileAffiliation">Affiliation</label>
                                         </div>
                                         <div class="input-field col s12">
-                                            <textarea id="profilePublicInfo" class="materialize-textarea"></textarea>
+                                            <textarea id="profilePublicInfo" class="materialize-textarea" ng-model="profile_publicinfo"></textarea>
                                             <label for="profilePublicInfo">Public Information</label>
                                         </div>
                                     </form>
