fetch user info from db on profile click #63

--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -52,13 +52,11 @@
                                             </div>
                                         </div>
                                         <div class="input-field col s12">
-                                            <input id="profileUsername" type="text" class="validate"
-                                                value="username1234" disabled>
+                                            <input id="profileUsername" type="text" class="validate" ng-model="username" disabled>
                                             <label for="profileUsername">Username</label>
                                         </div>
                                         <div class="input-field col s12">
-                                            <input id="profileEmail" type="email" class="validate" value="mail@mail.com"
-                                                disabled>
+                                            <input id="profileEmail" type="email" class="validate" disabled>
                                             <label for="profileEmail">Email</label>
                                         </div>
                                         <div class="input-field col s12">
