--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -297,7 +297,7 @@
                     <div class="row left-align">
                         <div class="col">
                             <div js-tree="references_search_jstree_config" should-apply="references_search_jstree_config_apply()"
-                                ng-model="references_search_jstree_model" tree="rreferences_search_jstree"
+                                ng-model="references_search_jstree_model" tree="references_search_jstree"
                                 tree-events="select_node:references_search_jstree_select_node"></div>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                     <i class="material-icons arrow left">keyboard_arrow_right</i>
                     <i class="material-icons left">whatshot</i>
                     <span class="left" style="margin-right: 10px;">Users</span>
-                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;">0</span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_users_number"></span>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -324,24 +324,11 @@
                             </div>
                         </form>
                     </div>
-                    <div class="container">
-                        <div class="row">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                            richardson
-                            ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
-                            truck
-                            quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-                            bird
-                            on
-                            it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
-                            keffiyeh
-                            helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                            Ad
-                            vegan
-                            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
-                            denim
-                            aesthetic synth nesciunt you probably haven't heard of them accusamus labore
-                            sustainable VHS.
+                    <div class="row left-align">
+                        <div class="col">
+                            <div js-tree="users_search_jstree_config" should-apply="users_search_jstree_config_apply()"
+                                ng-model="users_search_jstree_model" tree="users_search_jstree"
+                                tree-events="select_node:users_search_jstree_select_node"></div>
                         </div>
                     </div>
                 </div>
